gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "AdminStarter",
   "version": "1.0.0",
+  "homepage": "https://pmadar.github.io/AdminUI-starter",
   "devDependencies": {
     "react-scripts": "0.8.5"
   },
@@ -22,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
